# aws-temperature-calculator

./: .gitignore  .travis.yml  README.md  cdk.json  function.sh  package-lock.json  package.json
lambda/: Cargo.toml
lambda/temperature/: Cargo.toml
lambda/temperature/src/: main.rs
lib/: rust-stack.ts
test/: rust.test.ts
